--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch \"./\" --exec \"ts-node src/index.ts\" -e ts",
+    "dev": "npx ts-node-dev --respawn ./src/index.ts",
+    "start": "npx tsc && cp -r src/client/ build && nodemon build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
