--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx ts-node-dev --respawn ./src/index.ts",
-    "start": "npx tsc && cp -r src/client/ build && nodemon build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsup",
+    "start": "node dist"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,13 @@
     "@types/express": "^4.17.14",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20",
     "socket.io": "^4.5.2",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsup": "^6.5.0",
+    "tsx": "^3.12.2"
   }
 }
