--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsup",
-    "start": "node dist"
+    "build:dev": "tsup src src/index.ts --watch --onSuccess \"node build/index.js\"",
+    "start": "tsup && node build"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "socket.io": "^4.5.2",
+    "socket.io-client": "^4.6.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
